fix gallery hover click box alignment on small screen
it was not properly aligned, now it is. weird hack, huh?

--- a/squarespace/gallery hover click title/gallery-hover-click-title.less
+++ b/squarespace/gallery hover click title/gallery-hover-click-title.less
@@ -35,6 +35,8 @@ span#gallery-hover-click-styles {
     position: absolute;
     background-color: white;
     width: 100%;
+    left: 50%;
+    margin-left: -50%;
     padding: 0;
     .meta {
       width: auto;
